--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "node-sass": "^7.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-p5": "^1.3.27",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-scrollbars-custom": "^4.0.27",
     "react-simple-typewriter": "^3.0.1",
@@ -48,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.1.9",
     "gh-pages": "^3.2.3"
   }
 }
