--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aki-desu",
   "version": "0.1.0",
-  "homepage": "https://akiaoki.github.io/",
+  "homepage": "https://akidevcat.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
